--- a/styles/main.css
+++ b/styles/main.css
@@ -1,11 +1,33 @@
 /* Start global styles */
 
+:root {
+  --header-height: 50px;
+  --min-border-radius: 5px;
+  --big-border-radius: 10px;
+  --max-border-radius: 15px;
+  --dark-red-color: rgb(175, 1, 1);
+  --white-color: rgb(255, 255, 255);
+  --darker-semi-transparent-white-color: rgba(255, 255, 255, 0.7);
+  --semi-transparent-white-color: rgba(255, 255, 255, 0.5);
+  --black-color: rgba(0, 0, 0, 1);
+  --darker-semi-transparent-black-color: rgba(0, 0, 0, 0.7);
+  --semi-transparent-black-color: rgba(0, 0, 0, 0.5);
+  --lighter-semi-transparent-black-color: rgba(0, 0, 0, 0.3);
+  --lighten-black-color: rgb(48, 48, 48);
+  --light-blue-color: rgb(110, 190, 255);
+  --blue-color: rgb(0, 125, 237);
+  --darker-blue-color: rgb(0, 38, 82);
+  --darken-white-color: rgb(241, 241, 241);
+  --lighter-grey-color: rgb(212, 212, 212);
+}
+
 *,
 *::before,
 *::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scrollbar-width: thin;
 }
 
 html {
@@ -19,39 +41,55 @@ body {
   overflow-y: auto;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: var(--min-border-radius);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 /* End global styles */
 
 /* Start toast notificacion styles */
 
-/* The snackbar - position it at the bottom and in the middle of the screen */
 #snackbar {
-  visibility: hidden; /* Hidden by default. Visible on click */
-  min-width: 250px; /* Set a default minimum width */
+  min-width: 250px;
   width: 95%;
   max-width: 500px;
-  transform: translateX(-50%); /* Divide value of min-width by 2 */
-  background-color: rgb(190, 0, 0); /* Black background color */
-  color: rgb(255, 255, 255); /* White text color */
-  text-align: center; /* Centered text */
-  border-radius: 5px; /* Rounded borders */
-  padding: 1rem; /* Padding */
-  position: fixed; /* Sit on top of the screen */
-  z-index: 10; /* Add a z-index if needed */
-  left: 50%; /* Center the snackbar */
-  top: 80px; /* 30px from the bottom */
+  visibility: hidden;
+  position: fixed;
+  left: 50%;
+  top: 80px;
+  transform: translateX(-50%);
+  padding: 1rem;
   font-size: 1.5rem;
+  text-align: center;
+  color: var(--white-color);
+  background-color: var(--dark-red-color);
+  border-radius: var(--min-border-radius);
+  z-index: 100;
 }
 
-/* Show the snackbar when clicking on a button (class added with JavaScript) */
 #snackbar.show {
-  visibility: visible; /* Show the snackbar */
-  /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
-  However, delay the fade out process for 2.5 seconds */
+  visibility: visible;
   -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
   animation: fadein 0.5s, fadeout 0.5s 2.5s;
 }
 
-/* Animations to fade the snackbar in and out */
 @-webkit-keyframes fadein {
   from {
     bottom: 0;
@@ -105,18 +143,17 @@ body {
   left: 0;
   top: 0;
   width: 100%;
-  height: 60px;
+  height: var(--header-height);
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  gap: 1rem;
   padding: 0 2rem;
-  backdrop-filter: blur(8px) saturate(100%);
-  -webkit-backdrop-filter: blur(8px) saturate(100%);
-  background-color: rgba(0, 0, 0, 0.7);
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.5);
-  z-index: 100;
+  backdrop-filter: blur(10px) saturate(100%);
+  -webkit-backdrop-filter: blur(10px) saturate(100%);
+  background-color: var(--darker-semi-transparent-black-color);
+  box-shadow: 0 2px 5px 0 var(--semi-transparent-black-color);
+  z-index: 110;
 }
 
 #trademark {
@@ -128,17 +165,18 @@ body {
 }
 
 #trademark-text {
-  font-size: 3rem;
+  user-select: none;
+  font-size: 2.8rem;
   font-family: "Lobster", cursive;
   text-transform: uppercase;
   letter-spacing: 5px;
-  color: white;
+  color: var(--white-color);
 }
 
 #trademark-text span {
   font-family: "Poppins", sans-serif;
   letter-spacing: 0;
-  color: rgba(255, 255, 255, 0.7);
+  color: var(--darker-semi-transparent-white-color);
 }
 
 #navbar {
@@ -162,49 +200,58 @@ body {
 }
 
 .nav-link {
+  width: max-content;
+  height: 85%;
   display: flex;
   align-items: center;
-  width: max-content;
-  height: 80%;
   padding: 0 1rem;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   font-weight: 500;
   text-decoration: none;
   line-height: 0px;
-  color: rgb(255, 255, 255);
-  border-radius: 5px;
+  color: var(--white-color);
+  border-radius: var(--min-border-radius);
   transition: all 300ms;
 }
 
 .nav-link:hover,
 .current.nav-link:hover {
-  background-color: rgba(255, 255, 255, 0.5);
-  color: white;
+  background-color: var(--semi-transparent-white-color);
+  color: var(--black-color);
 }
 
 .current.nav-link {
-  background-color: rgb(255, 255, 255);
-  color: black;
+  background-color: var(--white-color);
+  color: var(--black-color);
 }
 
 #burger {
+  height: 85%;
+  width: 5rem;
   display: none;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 0.7rem;
+  gap: 0.8rem;
+  background-color: var(--lighter-semi-transparent-black-color);
+  border-radius: var(--min-border-radius);
 }
 
 .line {
-  width: 4rem;
-  height: 0.4rem;
-  background-color: rgb(255, 255, 255);
-  border-radius: 5px;
+  width: 40px;
+  height: 3px;
+  background-color: var(--white-color);
+  border-radius: var(--big-border-radius);
   transition: all 300ms;
 }
 
+.active#burger {
+  gap: 0;
+}
+
 .active#burger .line:nth-of-type(1) {
-  transform: rotate(-45deg) translateY(15px);
+  transform: translate(0, 3px) rotate(-45deg);
+  background-color: var(--light-blue-color);
 }
 
 .active#burger .line:nth-of-type(2) {
@@ -213,44 +260,50 @@ body {
 }
 
 .active#burger .line:nth-of-type(3) {
-  transform: rotate(45deg) translateY(-16px);
+  transform: translate(0, -3px) rotate(45deg);
 }
 
 .active#navbar {
   transform: translateX(0%);
 }
 
-@media only screen and (max-width: 900px) {
-  #header {
-    gap: 0;
+@media only screen and (max-width: 800px) {
+  #trademark-text {
+    font-size: 2.5rem;
   }
 
   #navbar {
-    width: 30%;
     position: absolute;
-    top: 6rem;
+    top: var(--header-height);
     right: 0;
-    height: calc(100vh - 60px);
-    background-color: rgb(14, 14, 14);
+    width: 35%;
+    height: calc(100vh - var(--header-height));
+    background-color: rgba(0, 0, 0, 0.8);
     transform: translate(150%);
     transition: all 300ms;
   }
 
   #links-container {
     width: 100%;
+    height: 100%;
     flex-direction: column;
+    flex-shrink: 0;
+    flex-grow: 0;
+    flex-wrap: nowrap;
     justify-content: flex-start;
     gap: 1rem;
-    padding-top: 2rem;
+    padding: 2rem 0;
     overflow-y: auto;
   }
 
   .nav-link {
     width: 90%;
+    min-height: 50px;
     height: 50px;
-    padding: 0 1.5rem;
-    border-radius: 5px;
-    border: 2px solid rgba(255, 255, 255, 0.5);
+    padding: 0 1rem;
+    background-color: var(--black-color);
+    border-radius: var(--min-border-radius);
+    border: 2px solid var(--darker-semi-transparent-white-color);
   }
 
   #burger {
@@ -258,34 +311,38 @@ body {
   }
 }
 
-@media only screen and (max-width: 780px) {
-  #navbar {
-    width: 40%;
-  }
-}
-
 @media only screen and (max-width: 600px) {
-  #header {
-    height: 50px;
-  }
   #navbar {
-    top: 5rem;
-    height: calc(100vh - 50px);
-    width: 55%;
+    width: 45%;
   }
 }
 
 @media only screen and (max-width: 425px) {
   #trademark-text {
-    font-size: 2.5rem;
+    font-size: 2.3rem;
   }
 
   #navbar {
-    width: 70%;
+    width: 60%;
   }
 
   .nav-link {
     padding: 0 1rem;
+  }
+
+  #burger {
+    height: 80%;
+    width: 4rem;
+  }
+
+  .line {
+    width: 30px;
+  }
+}
+
+@media only screen and (max-width: 350px) {
+  #navbar {
+    width: 70%;
   }
 }
 
@@ -308,21 +365,29 @@ body {
   justify-content: center;
   align-items: center;
   gap: 2rem;
-  padding: 2rem;
-  background: rgb(0, 125, 237);
-  background: linear-gradient(180deg, rgb(0, 136, 255) 0%, rgb(0, 39, 83) 100%);
+  padding: 3rem;
+  background: var(--blue-color);
+  background: linear-gradient(
+    -180deg,
+    var(--blue-color) 0%,
+    var(--darker-blue-color) 100%
+  );
 }
 
 #home-title-container h1 {
-  font-size: 4.5rem;
+  user-select: none;
+  font-size: 5rem;
   font-weight: 900;
   text-align: center;
+  color: var(--white-color);
 }
 
 #home-title-container p {
+  user-select: none;
   font-size: 2rem;
   font-weight: 500;
   text-align: center;
+  color: var(--white-color);
 }
 
 #arrow-down {
@@ -333,35 +398,57 @@ body {
 }
 
 #arrow-down svg {
-  stroke: black;
+  stroke: var(--white-color);
   animation: arrow;
   animation-duration: 2s;
   animation-iteration-count: infinite;
 }
 
+.home-container h2 {
+  position: relative;
+  user-select: none;
+  width: 100%;
+  padding: 4rem 2rem 0.5rem 2rem;
+  font-size: 4rem;
+  font-weight: 700;
+  text-align: center;
+}
+
+.home-container h2::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  min-width: 200px;
+  width: 70%;
+  max-width: 500px;
+  height: 3px;
+  background-color: var(--semi-transparent-black-color);
+  border-radius: var(--min-border-radius);
+}
+
+#hospedaje-section > p,
+#guides-section > p,
+#food-section > p,
+#transport-section > p {
+  width: 100%;
+  font-size: 2rem;
+  text-align: center;
+  padding: 0 2rem;
+}
+
 #mini-services-container {
   width: 100%;
   height: max-content;
-  padding: 2rem;
-  margin-top: 5rem;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   gap: 5rem;
-}
-
-#mini-services-container h2,
-#hospedaje-section h2,
-#guides-section h2,
-#food-section h2,
-#transport-section h2 {
-  width: 100%;
-  padding: 4rem 2rem;
-  font-size: 4rem;
-  font-weight: 700;
-  text-align: center;
+  padding: 2rem;
+  margin-top: 3rem;
 }
 
 #even-min-cards,
@@ -386,60 +473,52 @@ body {
 
 .mini-service-card {
   min-width: 290px;
-  width: 60%;
+  width: 90%;
   max-width: 400px;
-  height: 50vh;
-  border-radius: 20px;
-  background-color: rgb(241, 241, 241);
-  box-shadow: 10px 10px 0 0 rgb(212, 212, 212);
+  height: 300px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  background-color: var(--darken-white-color);
+  border-radius: var(--max-border-radius);
+  box-shadow: 8px 8px 0 0 var(--lighter-grey-color);
 }
 
 .mini-service-card img {
   object-fit: cover;
   width: 100%;
   height: 80%;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
+  border-top-left-radius: var(--max-border-radius);
+  border-top-right-radius: var(--max-border-radius);
 }
 
 .mini-service-card a {
   display: block;
   width: 100%;
   height: 20%;
-  font-size: 2rem;
-  color: black;
-  text-align: center;
-  text-decoration: none;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
+  font-size: 2rem;
+  text-align: center;
+  color: var(--black-color);
+  text-decoration: none;
+  border-bottom-left-radius: var(--max-border-radius);
+  border-bottom-right-radius: var(--max-border-radius);
   transition: all 300ms;
 }
 
 .mini-service-card a:hover {
-  background-color: rgb(48, 48, 48);
-  color: white;
+  background-color: var(--lighten-black-color);
+  color: var(--white-color);
 }
 
 #hospedaje-section {
   width: 100%;
   height: max-content;
+  margin-top: 9rem;
   padding: 2rem;
-  margin-top: 100px;
-}
-
-#hospedaje-section > p,
-#guides-section > p,
-#food-section > p,
-#transport-section > p {
-  font-size: 2rem;
-  text-align: center;
 }
 
 #hospedaje-cards-container {
@@ -456,50 +535,61 @@ body {
 .hospedaje-card {
   min-width: 290px;
   width: 80%;
-  max-width: 600px;
-  min-height: 500px;
-  height: 80vh;
-  max-height: 800px;
+  max-width: 430px;
+  height: 510px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
   gap: 1.5rem;
-  background-color: rgb(241, 241, 241);
-  box-shadow: -10px 10px 0 0 rgb(212, 212, 212);
   margin-top: 3rem;
-  border-radius: 10px;
   padding: 2rem;
+  background-color: var(--darken-white-color);
+  border-radius: var(--min-border-radius);
+  box-shadow: -10px 10px 0 0 var(--lighter-grey-color);
 }
 
 .hospedaje-card img {
   width: 100%;
   height: 50%;
+  max-height: 50%;
   object-fit: cover;
-  border-radius: 10px;
+  border-radius: var(--min-border-radius);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .hospedaje-card p {
   width: 100%;
   height: 40%;
-  font-size: 1.8rem !important;
+  max-height: 40%;
+  padding-right: 1rem;
+  font-size: 1.5rem;
+  overflow-y: auto;
 }
 
-.hospedaje-card a {
+.hotel-link-container {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 40%;
+  width: 100%;
   height: 10%;
-  font-size: 1.8rem !important;
-  background-color: rgba(0, 0, 0, 0.2);
-  border: solid 2px black;
-  border-radius: 10px;
-  text-align: center;
+}
+
+.hotel-link-container a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 180px;
+  width: 40%;
+  max-width: 300px;
+  height: 100%;
+  font-size: 1.8rem;
   text-decoration: none;
-  color: black;
   line-height: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+  color: var(--black-color);
+  border: solid 2px var(--black-color);
+  border-radius: var(--min-border-radius);
   transition: all 300ms;
 }
 
@@ -511,14 +601,14 @@ body {
 #guides-section {
   width: 100%;
   height: max-content;
-  margin-top: 2rem;
+  margin-top: 3rem;
   padding: 0;
 }
 
 #guides-collage {
   position: relative;
   width: 100%;
-  height: 80vh;
+  height: 70vh;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   margin-top: 2rem;
@@ -527,7 +617,7 @@ body {
 #guides-collage img {
   grid-column: span 1;
   width: 100%;
-  height: 40vh;
+  height: 35vh;
   object-fit: cover;
 }
 
@@ -538,10 +628,11 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: var(--semi-transparent-black-color);
   justify-content: center;
   align-items: center;
   padding: 2rem;
+  transition: all 300ms;
 }
 
 #guides-collage:hover #tour-overlay {
